# DL_Rover_Autoencoder

./: .gitignore  CMakeLists.txt  README.md  generateLaserData.cpp  generateMultiRoverExperts.cpp
autoencoder/: L1Penalty.py  LaserDataset.py  README.md  comms.py  encode_laser.py  encode_laser_ae.py  laser_ae.py  laser_cae.py  layer_size_calc.ods  plot.py  train_ae.py  train_cae.py  train_poi_laser.csv
autoencoder/models/model0/: README.md  conv_autoencoder.pth  laser_cae.py
autoencoder/models/model1/: README.md  conv_autoencoder_3layer.pth  laser_cae.py
autoencoder/models/model2/: README.md  conv_autoencoder_new.pth  laser_cae.py
autoencoder/models/model3/: README.md  autoencoder_new.pth  laser_ae.py
autoencoder/models/model4/: README.md  autoencoder_new.pth  laser_ae.py
autoencoder/models/model5/: README.md  conv_autoencoder_new.pth  train.csv
autoencoder/old_scripts/: README.md  mnist_cae.py
autoencoder/samples/: README.md  sample_poi_laser.csv  sample_rov_laser.csv  train_rov_laser.csv
communications/: comms.cpp  comms.py
include/: CMakeLists.txt  README.md
include/Agents/: .Rover.cpp.swp  CMakeLists.txt  README.md  Rover.cpp  Rover.h
include/Domains/: .DistMultRover.cpp.swp  .DistMultRover.h.swp  .MultiRover.cpp.swp  .MultiRover.h.swp  CMakeLists.txt  DistMultRover.cpp  DistMultRover.h  MAPElitesRover.h  MultiRover.cpp  MultiRover.h  SingleRover.h
include/Learning/: NeuralNet.cpp  NeuralNet.h  NeuroEvo.cpp  NeuroEvo.h
include/Utilities/: MatrixTypes.cpp  MatrixTypes.h  UtilFunctions.cpp  UtilFunctions.h
(+15 files in other folders)
